--- a/cmd/starcoin/Cargo.toml
+++ b/cmd/starcoin/Cargo.toml
@@ -73,6 +73,7 @@ starcoin-vm2-storage = { workspace = true }
 starcoin-vm2-vm-types = { workspace = true }
 starcoin-vm2-state-api = { workspace = true }
 starcoin-vm2-rpc-api = { workspace = true }
+starcoin-vm2-vm-runtime = { workspace = true }
 
 [dev-dependencies]
 stest = { workspace = true }
