--- a/genesis/Cargo.toml
+++ b/genesis/Cargo.toml
@@ -31,6 +31,7 @@ starcoin-vm2-vm-types = { workspace = true }
 starcoin-vm2-types = { workspace = true }
 starcoin-vm2-crypto = { workspace = true }
 starcoin-vm2-statedb = { workspace = true }
+starcoin-vm2-state-api = { workspace = true }
 
 [dev-dependencies]
 test-helper = { workspace = true }
