Migrate starcoin-vm2-storage references to starcoin-storage

--- a/cmd/starcoin/Cargo.toml
+++ b/cmd/starcoin/Cargo.toml
@@ -69,7 +69,7 @@ starcoin-vm2-move-compiler = { workspace = true }
 starcoin-vm2-framework = { workspace = true }
 starcoin-vm2-statedb = { workspace = true }
 starcoin-vm2-status-translator = { workspace = true }
-starcoin-vm2-storage = { workspace = true }
+starcoin-storage = { workspace = true }
 starcoin-vm2-vm-types = { workspace = true }
 starcoin-vm2-state-api = { workspace = true }
 starcoin-vm2-rpc-api = { workspace = true }
