--- a/vm2/chain/Cargo.toml
+++ b/vm2/chain/Cargo.toml
@@ -14,7 +14,7 @@ anyhow = { workspace = true }
 starcoin-vm2-crypto = { workspace = true }
 starcoin-vm2-executor = { workspace = true }
 starcoin-vm2-statedb = { workspace = true }
-starcoin-vm2-storage = { workspace = true }
+starcoin-storage = { workspace = true }
 starcoin-vm2-types = { workspace = true }
 starcoin-vm2-vm-types = { workspace = true }
 starcoin-vm2-state-api = { workspace = true }
