--- a/vm2/service/state/Cargo.toml
+++ b/vm2/service/state/Cargo.toml
@@ -7,7 +7,7 @@ starcoin-vm2-crypto = { workspace = true }
 starcoin-logger = { workspace = true }
 starcoin-service-registry = { workspace = true }
 starcoin-vm2-state-api = { workspace = true }
-starcoin-vm2-state-tree = { workspace = true }
+starcoin-state-tree = { workspace = true }
 starcoin-vm2-statedb = { workspace = true }
 starcoin-vm2-types = { workspace = true }
 stest = { workspace = true }
