--- a/vm2/vm-runtime-types/Cargo.toml
+++ b/vm2/vm-runtime-types/Cargo.toml
@@ -2,7 +2,7 @@
 authors = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
-name = "starcoin-vm2-runtime-types"
+name = "starcoin-runtime-types"
 publish = { workspace = true }
 version = "2.0.1"
 homepage = { workspace = true }
@@ -14,13 +14,13 @@ starcoin-types = { workspace = true }
 starcoin-vm-types = { workspace = true }
 starcoin-gas-meter = { workspace = true }
 starcoin-gas-schedule = { workspace = true }
-move-core-types = { workspace = true }
+move-core-types = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
 anyhow = { workspace = true }
 bytes = { workspace = true }
 bcs = { workspace = true }
 serde = { workspace = true }
 starcoin-aggregator = { workspace = true }
-move-vm-types = { workspace = true }
+move-vm-types = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
 rand = { workspace = true }
 
 
