--- a/vm2/abi/types/Cargo.toml
+++ b/vm2/abi/types/Cargo.toml
@@ -6,7 +6,7 @@ serde = { workspace = true }
 serde_bytes = { workspace = true }
 serde_json = { workspace = true }
 starcoin-vm-types = { workspace = true }
-move-core-types = { workspace = true }
+move-core-types = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
 
 [package]
 authors = { workspace = true }
