--- a/vm2/aggregator/Cargo.toml
+++ b/vm2/aggregator/Cargo.toml
@@ -1,25 +1,32 @@
 [package]
-name = "starcoin-native-interface"
-version = "2.0.1"
-
-# Workspace inherited keys
 authors = { workspace = true }
 edition = { workspace = true }
-homepage = { workspace = true }
 license = { workspace = true }
+name = "starcoin-aggregator"
+description = "Aggregator sources for the Starcoin blockchain"
 publish = { workspace = true }
+version = "2.0.1"
+homepage = { workspace = true }
 repository = { workspace = true }
 rust-version = { workspace = true }
 
-
 [dependencies]
-starcoin-gas-algebra = { workspace = true }
-starcoin-gas-schedule = { workspace = true }
+anyhow = { workspace = true }
+starcoin-logger = { workspace = true }
+starcoin-types = { workspace = true }
 starcoin-vm-types = { workspace = true }
 bcs = { workspace = true }
-bytes = { workspace = true }
+claims = { workspace = true }
 move-binary-format = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
 move-core-types = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
-move-vm-runtime = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
 move-vm-types = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
-smallvec = { workspace = true }
+
+
+[dev-dependencies]
+once_cell = { workspace = true }
+test-case = { workspace = true }
+
+[features]
+default = []
+testing = []
+
