--- a/vm2/executor/Cargo.toml
+++ b/vm2/executor/Cargo.toml
@@ -26,5 +26,5 @@ bcs-ext = { workspace = true }
 starcoin-config = { workspace = true }
 starcoin-vm2-test-helper = { workspace = true }
 starcoin-vm2-transaction-builder = { workspace = true }
-move-vm2-transactional-test-runner = { workspace = true }
-move-vm2-core-types = { workspace = true }
+move-vm2-transactional-test-runner = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
+move-vm2-core-types = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
