--- a/vm2/gas-schedule/Cargo.toml
+++ b/vm2/gas-schedule/Cargo.toml
@@ -1,10 +1,10 @@
 [dependencies]
 either = { workspace = true }
-move-core-types = { workspace = true }
-move-binary-format = { workspace = true }
-move-table-extension = { workspace = true }
-move-vm-types = { workspace = true }
-move-vm-test-utils = { workspace = true }
+move-core-types = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
+move-binary-format = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
+move-table-extension = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
+move-vm-types = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
+move-vm-test-utils = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
 serde = { workspace = true }
 paste = { workspace = true }
 starcoin-gas-algebra = { workspace = true }
@@ -16,7 +16,7 @@ authors = { workspace = true }
 description = "starcoin-gas-schedule"
 edition = { workspace = true }
 license = { workspace = true }
-name = "starcoin-vm2-gas-schedule"
+name = "starcoin-gas-schedule"
 publish = { workspace = true }
 version = "2.0.1"
 homepage = { workspace = true }
