--- a/vm2/resource-viewer/Cargo.toml
+++ b/vm2/resource-viewer/Cargo.toml
@@ -1,8 +1,8 @@
 [dependencies]
 anyhow = { workspace = true }
 hex = { workspace = true }
-move-binary-format = { workspace = true }
-move-core-types = { workspace = true }
+move-binary-format = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
+move-core-types = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
 serde = { features = ["derive", "rc"], workspace = true }
 serde_json = { workspace = true }
 starcoin-vm-types = { workspace = true }
