--- a/vm2/vm-status-translator/Cargo.toml
+++ b/vm2/vm-status-translator/Cargo.toml
@@ -3,12 +3,12 @@ anyhow = { workspace = true }
 schemars = { workspace = true }
 serde = { workspace = true }
 starcoin-vm-types = { workspace = true }
-move-core-types = { workspace = true }
+move-core-types = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
 
 [package]
 authors = { workspace = true }
 edition = { workspace = true }
-name = "starcoin-vm2-status-translator"
+name = "starcoin-status-translator"
 version = "2.0.1"
 homepage = { workspace = true }
 license = { workspace = true }
