--- a/vm2/framework/Cargo.toml
+++ b/vm2/framework/Cargo.toml
@@ -14,12 +14,12 @@ rust-version = { workspace = true }
 
 [dependencies]
 anyhow = { workspace = true }
-starcoin-aggregator = { workspace = true }
+starcoin-aggregator = { path = "../aggregator" }
 starcoin-vm2-crypto = { workspace = true }
-starcoin-gas-algebra = { path = "../gas-algebra" }
-starcoin-gas-schedule = { path = "../gas-schedule" }
+starcoin-gas-algebra = { path = "gas-algebra" }
+starcoin-gas-schedule = { path = "gas-schedule" }
 starcoin-move-stdlib = { path = "move-stdlib", package = "starcoin-move-stdlib" }
-starcoin-native-interface = { path = "../native-interface" }
+starcoin-native-interface = { path = "native-interface" }
 starcoin-sdk-builder = { path = "../sdk-builder" }
 starcoin-types = { path = "../types" }
 starcoin-vm-types = { path = "../vm-types" }
@@ -80,7 +80,7 @@ thiserror = { workspace = true }
 tiny-keccak = { workspace = true }
 
 [dev-dependencies]
-starcoin-aggregator = { workspace = true, features = ["testing"] }
+starcoin-aggregator = { path = "../aggregator", features = ["testing"] }
 starcoin-vm2-crypto = { workspace = true, features = ["fuzzing"] }
 # starcoin-gas-meter = { workspace = true }
 starcoin-vm-runtime = { path = "../vm-runtime", features = ["testing"] }
@@ -92,7 +92,7 @@ move-unit-test = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6
 [features]
 default = []
 fuzzing = ["starcoin-types/fuzzing"]
-testing = ["starcoin-move-stdlib/testing", "starcoin-crypto/fuzzing"]
+testing = ["starcoin-move-stdlib/testing", "starcoin-vm2-crypto/fuzzing"]
 
 [lib]
 doctest = false
