--- a/vm2/vm-runtime-types/Cargo.toml
+++ b/vm2/vm-runtime-types/Cargo.toml
@@ -12,14 +12,14 @@ rust-version = { workspace = true }
 [dependencies]
 starcoin-vm2-types = { workspace = true }
 starcoin-vm2-vm-types = { workspace = true }
-starcoin-gas-meter = { workspace = true }
-starcoin-gas-schedule = { workspace = true }
+starcoin-gas-meter = { path = "../framework/gas-meter" }
+starcoin-gas-schedule = { path = "../framework/gas-schedule" }
 move-core-types = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
 anyhow = { workspace = true }
 bytes = { workspace = true }
 bcs = { workspace = true }
 serde = { workspace = true }
-starcoin-aggregator = { workspace = true }
+starcoin-aggregator = { path = "../aggregator" }
 move-vm-types = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
 rand = { workspace = true }
 
