--- a/vm2/framework/gas-meter/Cargo.toml
+++ b/vm2/framework/gas-meter/Cargo.toml
@@ -1,5 +1,5 @@
 [dependencies]
-starcoin-gas-schedule = { workspace = true }
+starcoin-gas-schedule = { path = "../gas-schedule" }
 clap = { workspace = true }
 move-binary-format = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
 move-core-types = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
@@ -7,7 +7,7 @@ move-stdlib = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd7
 move-table-extension = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
 move-vm-types = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
 starcoin-logger = { workspace = true }
-starcoin-gas-algebra = { workspace = true }
+starcoin-gas-algebra = { path = "../gas-algebra" }
 
 [package]
 authors = { workspace = true }
