--- a/vm2/framework/gas-schedule/Cargo.toml
+++ b/vm2/framework/gas-schedule/Cargo.toml
@@ -2,20 +2,21 @@
 either = { workspace = true }
 move-core-types = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
 move-binary-format = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
-move-stdlib = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
 move-table-extension = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
 move-vm-types = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
 move-vm-test-utils = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
 serde = { workspace = true }
-paste = { workspace = true }
+paste = "1.0"
+starcoin-gas-algebra = { path = "../gas-algebra" }
+once_cell = { workspace = true }
 
 
 [package]
 authors = { workspace = true }
-description = "starcoin vm2 gas algebra"
+description = "starcoin-gas-schedule"
 edition = { workspace = true }
 license = { workspace = true }
-name = "starcoin-gas-algebra"
+name = "starcoin-gas-schedule"
 publish = { workspace = true }
 version = "2.0.1"
 homepage = { workspace = true }
@@ -24,4 +25,3 @@ rust-version = { workspace = true }
 
 [features]
 default = []
-testing = ["move-stdlib/testing"]
