--- a/vm2/sdk-builder/Cargo.toml
+++ b/vm2/sdk-builder/Cargo.toml
@@ -26,8 +26,8 @@ serde_yaml = { workspace = true }
 textwrap = { workspace = true }
 
 [dev-dependencies]
-starcoin-cached-packages = { workspace = true }
-starcoin-framework = { workspace = true }
+starcoin-vm2-cached-packages = { workspace = true }
+starcoin-vm2-framework = { workspace = true }
 tempfile = { workspace = true }
 which = { workspace = true }
 
