--- a/vm2/service/state/Cargo.toml
+++ b/vm2/service/state/Cargo.toml
@@ -9,7 +9,7 @@ starcoin-service-registry = { workspace = true }
 starcoin-vm2-state-api = { workspace = true }
 starcoin-state-tree = { workspace = true }
 starcoin-vm2-statedb = { workspace = true }
-starcoin-vm2-types = { workspace = true }
+starcoin-types = { workspace = true }
 stest = { workspace = true }
 tokio = { workspace = true }
 starcoin-vm2-vm-types = { workspace = true }
