Fix all clippy warnings in VM2 framework and runtime (#4622)
* Fix all clippy warnings in VM2 framework and runtime

* Clippy check with -Aclippy::doc_lazy_continuation for ignoring auto generated  sdk

* Fix transaction benchmarks

* Update nextest policy

* Ignore the legacy flexidag integration in cmd.feature

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
   pull_request:
     branches:
-      - multi-move-vm
+      - dual-verse-dag
 
 jobs:
   build-and-test:
@@ -32,7 +32,8 @@ jobs:
           RUSTFLAGS: -D warnings
         with:
           command: clippy
-          args: --all-targets
+          args: --all-targets -- -Aclippy::doc_lazy_continuation
+
       - name: build
         uses: actions-rs/cargo@v1
         with:
