--- a/Cargo.toml
+++ b/Cargo.toml
@@ -588,14 +588,14 @@ starcoin-proptest-helpers = { path = "vm/proptest-helpers" }
 starcoin-vm2-chain = { path = "vm2/chain" }
 starcoin-vm2-genesis = { path = "vm2/genesis" }
 starcoin-vm2-executor = { path = "vm2/executor" }
-starcoin-vm2-test-helper = { path = "vm2/test-helper" }
+starcoin-vm2-test-helper = { path = "vm2/test-helper", package = "starcoin-test-helper" }
 starcoin-vm2-state-service = { path = "vm2/service/state" }
 starcoin-vm2-account-service = { path = "vm2/service/account" }
 starcoin-vm2-rpc-api = { path = "vm2/rpc/api" }
 starcoin-vm2-rpc-server = { path = "vm2/rpc/server" }
 starcoin-vm2-vm-runtime = { path = "vm2/vm-runtime", package = "starcoin-vm-runtime" }
 starcoin-vm2-types = { path = "vm2/types", package = "starcoin-types" }
-starcoin-vm2-vm-types = { path = "vm2/vm-types" }
+starcoin-vm2-vm-types = { path = "vm2/vm-types", package = "starcoin-vm-types" }
 starcoin-vm2-framework = { path = "vm2/framework", package = "starcoin-framework" }
 starcoin-vm2-cached-packages = { path = "vm2/framework/cached-packages", package = "starcoin-cached-packages" }
 starcoin-vm2-gas-algebra = { path = "vm2/framework/gas-algebra", package = "starcoin-gas-algebra" }
@@ -616,7 +616,7 @@ starcoin-vm2-account = { path = "vm2/account" }
 starcoin-vm2-account-api = { path = "vm2/account/api" }
 starcoin-vm2-account-provider = { path = "vm2/account/provider" }
 starcoin-vm2-resource-viewer = { path = "vm2/resource-viewer" }
-starcoin-vm2-status-translator = { path = "vm2/vm-status-translator" }
+starcoin-vm2-status-translator = { path = "vm2/vm-status-translator", package = "starcoin-status-translator" }
 
 move-vm2-core-types = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5", package = "move-core-types" }
 move-vm2-transactional-test-runner = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5", package = "move-transactional-test-runner" }
