--- a/vm2/vm-types/Cargo.toml
+++ b/vm2/vm-types/Cargo.toml
@@ -65,7 +65,7 @@ print_gas_info = []
 authors = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
-name = "starcoin-vm2-vm-types"
+name = "starcoin-vm-types"
 publish = { workspace = true }
 version = "2.0.1"
 homepage = { workspace = true }
