--- a/vm2/package-builder/Cargo.toml
+++ b/vm2/package-builder/Cargo.toml
@@ -14,7 +14,7 @@ rust-version = { workspace = true }
 
 [dependencies]
 anyhow = { workspace = true }
-starcoin-vm2-framework = { workspace = true }
+starcoin-framework = { path = "../framework" }
 itertools = { workspace = true }
 move-command-line-common = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
 move-package = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
