--- a/vm2/abi/resolver/Cargo.toml
+++ b/vm2/abi/resolver/Cargo.toml
@@ -8,7 +8,7 @@ starcoin-vm2-vm-types = { workspace = true }
 [dev-dependencies]
 serde_json = { workspace = true }
 # stdlib = { workspace = true }
-# test-helper = { workspace = true }
+test-helper = { path = "../../../vm2/test-helper", package = "starcoin-test-helper" }
 
 [package]
 authors = { workspace = true }
