--- a/vm2/compiler/Cargo.toml
+++ b/vm2/compiler/Cargo.toml
@@ -6,12 +6,12 @@ move-compiler = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6d
 once_cell = { workspace = true }
 petgraph = { workspace = true }
 regex = { features = ["std", "perf"], workspace = true }
-starcoin-crypto = { workspace = true }
+starcoin-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", rev = "5417dce574142c3da24adf987194a6931869f588" }
 starcoin-logger = { workspace = true }
-starcoin-vm2-vm-types = { workspace = true }
+starcoin-vm-types = { path = "../vm-types" }
 tempfile = { workspace = true }
 walkdir = { workspace = true }
-starcoin-framework = { workspace = true }
+starcoin-framework = { path = "../framework" }
 
 #[dev-dependencies]
 #stest = { workspace = true }
