--- a/vm2/framework/native-interface/Cargo.toml
+++ b/vm2/framework/native-interface/Cargo.toml
@@ -15,7 +15,7 @@ rust-version = { workspace = true }
 [dependencies]
 starcoin-gas-algebra = { path = "../gas-algebra" }
 starcoin-gas-schedule = { path = "../gas-schedule" }
-starcoin-vm2-vm-types = { workspace = true }
+starcoin-vm-types = { path = "../../vm-types" }
 bcs = { workspace = true }
 bytes = { workspace = true }
 move-binary-format = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
