--- a/vm2/transaction-builder/Cargo.toml
+++ b/vm2/transaction-builder/Cargo.toml
@@ -1,7 +1,7 @@
 [dependencies]
 anyhow = { workspace = true }
 bcs-ext = { workspace = true }
-starcoin-crypto = { workspace = true }
+starcoin-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", rev = "5417dce574142c3da24adf987194a6931869f588" }
 starcoin-vm-types = { path = "../vm-types" }
 starcoin-types = { path = "../types" }
 starcoin-cached-packages = { path = "../framework/cached-packages" }
