--- a/vm2/types/Cargo.toml
+++ b/vm2/types/Cargo.toml
@@ -11,9 +11,9 @@ schemars = { workspace = true }
 serde = { features = ["derive"], workspace = true }
 serde_json = { workspace = true }
 starcoin-accumulator = { workspace = true }
-starcoin-vm2-crypto = { workspace = true }
+starcoin-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", rev = "5417dce574142c3da24adf987194a6931869f588" }
 starcoin-uint = { workspace = true }
-starcoin-vm-types = { path = "../vm-types" }
+starcoin-vm2-vm-types = { path = "../vm-types", package = "starcoin-vm-types" }
 starcoin-vm2-resource-viewer = { workspace = true }
 starcoin-vm2-abi-decoder = { workspace = true }
 starcoin-vm2-abi-types = { workspace = true }
@@ -34,7 +34,7 @@ claims = { workspace = true }
 
 [features]
 default = []
-fuzzing = ["proptest", "proptest-derive", "starcoin-vm-types/fuzzing"]
+fuzzing = ["proptest", "proptest-derive", "starcoin-vm2-vm-types/fuzzing"]
 
 [package]
 authors = { workspace = true }
