--- a/vm2/vm-runtime/Cargo.toml
+++ b/vm2/vm-runtime/Cargo.toml
@@ -12,7 +12,7 @@ rust-version = { workspace = true }
 [dependencies]
 anyhow = { workspace = true }
 bcs-ext = { workspace = true }
-starcoin-crypto = { workspace = true }
+starcoin-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", rev = "5417dce574142c3da24adf987194a6931869f588" }
 move-core-types = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5" }
 once_cell = { workspace = true }
 tracing = { workspace = true }
